fixed missing overflow directive

--- a/system/themes/default/src/main.css
+++ b/system/themes/default/src/main.css
@@ -110,6 +110,7 @@ body.popup {
 /* Navigation */
 #tl_navigation {
 	position:relative;
+	overflow-y:hidden;
 }
 #tl_navigation h1 {
 	margin:1px 1px 0;
